<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_nav_bar_home"/>
    <item
        android:id="@+id/navigation_post"
        android:enabled="true"
        android:icon="@drawable/baseline_add_box_24"
        android:title="@string/bottom_nav_bar_post"/>
    <item
        android:id="@+id/navigation_nearby"
        android:enabled="true"
        android:icon="@drawable/baseline_location_on_24"
        android:title="@string/bottom_nav_bar_nearby"/>
    <item
        android:id="@+id/navigation_inbox"
        android:enabled="true"
        android:icon="@drawable/baseline_inbox_24"
        android:title="@string/bottom_nav_bar_inbox"/>
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/bottom_nav_bar_profile"/>
</menu>